--- a/src/style/components/header.scss
+++ b/src/style/components/header.scss
@@ -1,6 +1,7 @@
 .main_header {
     height: 80px;
-    border-bottom: 1px solid rgba(245, 245, 245, .1);
+    border-bottom: 1px solid #25272B;
+    box-shadow: 0 1px 0 0 rgba(245, 245, 245, .1);
     color: $p100;
     position: relative;
     @include clearfix;
